# ArchivedSecOps

./: Cargo.toml  README.md
archive/sha1_cracker/: wordlist.txt
archive/sha1_cracker/src/: main.rs
sha1_cracker/: Cargo.toml
tricoder/: Cargo.toml
tricoder/src/: lib.rs  main.rs  subdomains.rs
